fleet/narthex/narthex-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: narthex
  name: narthex
