fleet/narthex/narthex-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: narthex-gateway
  namespace: narthex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  addresses:
    - type: IPAddress
      value: 10.0.1.245
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    # - allowedRoutes:
    #     namespaces:
    #       from: Same
    #       # from: All
    #   name: https
    #   port: 443
    #   protocol: HTTPS
    #   hostname: 'narthex.snellarcade.org' # ✅ Required.
    #   tls:
    #     mode: Terminate # ✅ Required. "Terminate" is the only supported mode.
    #     certificateRefs:
    #       - name: narthex-snellarcade-org-tls # ✅ Required.
    #         kind: Secret # ✅ Optional. "Secret" is the only valid value.
    #         group: '' # ✅ Optional. "" is the only valid value.
    - allowedRoutes:
        namespaces:
          from: Same
          # from: All
      name: https
      port: 443
      protocol: HTTPS
      hostname: '*.snellarcade.org' # ✅ Required.
      tls:
        mode: Terminate # ✅ Required. "Terminate" is the only supported mode.
        certificateRefs:
          - name: wild-snellarcade-tls # ✅ Required.
            kind: Secret # ✅ Optional. "Secret" is the only valid value.
            group: '' # ✅ Optional. "" is the only valid value.
