fleet/narthex/audiobookshelf-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  ports:
    - port: 80
      name: abs
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: audiobookshelf-0
    app: audiobookshelf
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  hostnames:
    - audiobookshelf.infra.falcone.us
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: narthex-gateway
      namespace: narthex
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf-tls
spec:
  hostnames:
    - audiobookshelf.snellarcade.org
    - audiobookshelf.lebastion.snellarcade.org
  parentRefs:
    - name: narthex-gateway
      sectionName: https
      namespace: narthex
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiobookshelf
spec:
  serviceName: 'audiobookshelf'
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf

          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: abs
              protocol: TCP
          resources:
            requests:
              memory: '1024Mi'
              # cpu: "250m"
            limits:
              memory: '1024Mi'
              # cpu: "2000m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            # - name: downloads
            #   subPath: torrents
            # mountPath: /downloads
            - name: media
              mountPath: /audiobooks
              subPath: Audiobooks
            - name: media
              mountPath: /podcasts
              subPath: Podcasts
          # livenessProbe:
          #   initialDelaySeconds: 60
          #   failureThreshold: 5
          #   timeoutSeconds: 10
          # livenessProbe:
          #   tcpSocket:
          #     port: 8989
          #   initialDelaySeconds: 300
          #   periodSeconds: 300
          #   timeoutSeconds: 50
          # readinessProbe:
          #   httpGet:
          #     path: /api/v3/system/status
          #     port: 8989
          #   initialDelaySeconds: 120
          #   periodSeconds: 30
          #   timeoutSeconds: 10
      securityContext:
        # runAsUser: 1001
        # runAsGroup: 1001
        fsGroup: 8675309
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        # - name: downloads
        #   persistentVolumeClaim:
        #     claimName: transient-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: 'longhorn'
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: metadata
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: 'longhorn'
        resources:
          requests:
            storage: 2Gi
