fleet/narthex/plex-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  hostnames:
    - narthaplex.infra.falcone.us
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: narthex-gateway
      namespace: narthex
  rules:
    - backendRefs:
        - name: plex-narthaplex
          port: 32400
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-tls
spec:
  hostnames:
    - narthaplex.snellarcade.org
    - narthaplex.lebastion.snellarcade.org
  parentRefs:
    - name: narthex-gateway
      sectionName: https
      namespace: narthex
  rules:
    - backendRefs:
        - name: plex-narthaplex
          port: 32400
