fleet/narthex/transmission-stateful.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn
  labels:
    app: transmission
spec:
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: transmission-vpn-0
    app: transmission
  ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
      name: rpc
    - port: 8888
      protocol: TCP
      targetPort: 8888
      name: webproxy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
spec:
  hostnames:
    - transmission.infra.falcone.us
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: narthex-gateway
      namespace: narthex
  rules:
    - backendRefs:
        - name: transmission-vpn
          port: 9091
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-tls
spec:
  hostnames:
    - transmission.snellarcade.org
    - transmission.lebastion.snellarcade.org
  parentRefs:
    - name: narthex-gateway
      sectionName: https
      namespace: narthex
  rules:
    - backendRefs:
        - name: transmission-vpn
          port: 9091
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission-vpn
  namespace: narthex
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: transmission
  serviceName: transmission-vpn
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission-vpn
          image: haugene/transmission-openvpn:5.3.1
          # had to delete vpn-configs-contrib before this would update
          # error inside suggested `git config --global --add safe.directory /config/vpn-configs-contrib` but ~/.gitconfig isn't persistent
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command: ['ping', '-I', 'tun0', '-c', '1', 'google.com']
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 2
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          ports:
            - containerPort: 8888
              hostPort: 8888
              name: webproxy
              protocol: TCP
            - containerPort: 9091
              hostPort: 9091
              name: rpc
              protocol: TCP
          resources:
            limits:
              memory: 2000Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
            procMount: Default
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /config
              name: config
            # - mountPath: /opt/transmission-ui/flood-for-transmission
            #   name: config
            #   subPath: flood-for-transmission
            - name: transient
              mountPath: /data
              subPath: torrents
            - mountPath: /data/incomplete
              name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 8675309
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transient
          persistentVolumeClaim:
            claimName: transient-pvc
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: 'longhorn'
        resources:
          requests:
            storage: 200Mi
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: 'longhorn'
        resources:
          requests:
            storage: 100Gi
